deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-hw-5-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arch-hw-5-app
  template:
    metadata:
      labels:
        app: arch-hw-5-app
    spec:
      containers:
        - name: hello-py
          image: alexanderrodnin/hello-py:v1
          ports:
            - name: web
              containerPort: 80
