service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch-hw-5-service
spec:
  selector:
    app: arch-hw-5-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
